fixed overflow on containers

--- a/client/src/styles/SharedStyles.css
+++ b/client/src/styles/SharedStyles.css
@@ -1,5 +1,5 @@
-  .container {
-    height: 98vh;
+   .container {
+    height: 97.9vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -7,11 +7,13 @@
   }
 
   .topBarContainer {
-    width: 100%;
+    width: 95vw;
     display: flex;
     justify-content: center;
     margin-top: 2rem;
     position: absolute;
+    overflow: hidden;
+    height: auto;
   }
   
   .topBar{
@@ -20,6 +22,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
+    height: 40px;
   }
 
   .topBar .topBarIcon {
